# lol_team_companion

./: .env.example  .gardener-notes.md  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTRUCTIONS.md  TODO.md  input.css  justfile  schema.surql
.cargo/: config.toml
.claude/: gsd-file-manifest.json  settings.json
.claude/rules/: leptos-patterns.md  surreal-patterns.md  wasm-patterns.md
.claude/skills/agent-browser/: SKILL.md
.claude/skills/dev-server/: SKILL.md
.claude/skills/pre-commit-docs/: SKILL.md
.claude/skills/verify-implementation/: SKILL.md
.github/workflows/: ci.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/assets/: AI-IMAGES.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-pipeline-ctas/: 01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-VALIDATION.md
.planning/phases/01.1-playwright-bug-audit-identify-and-document-existing-bugs-across-all-features/: 01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-03-PLAN.md  01.1-03-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  competitive_league_research.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: audit-champion-pool.spec.ts  audit-draft.spec.ts  audit-game-plan.spec.ts  audit-misc-pages.spec.ts  audit-post-game.spec.ts  audit-team.spec.ts  audit-tree-drafter.spec.ts  auth.spec.ts  bug-report.spec.ts  closed-beta-visual.spec.ts  fixtures.ts  fonts.spec.ts  helpers.ts  hydration-no-panic.spec.ts  match-detail.spec.ts  opponents.spec.ts  pages.spec.ts  pipeline.spec.ts  region-diff.spec.ts  regression.spec.ts  smoke.spec.ts  theme.spec.ts  visual-regression.spec.ts
scripts/: api_test.sh  clean-orphan-targets.sh  flow_test.sh  health.sh  wait_for_server.sh
src/: app.rs  error_template.rs  lib.rs  main.rs
src/components/: bug_report_widget.rs  champion_autocomplete.rs  champion_picker.rs  draft_board.rs  icon.rs  mod.rs  nav.rs  ornaments.rs  skeleton.rs  stat_card.rs  theme_toggle.rs  tree_graph.rs  ui.rs
src/models/: action_item.rs  bug_report.rs  champion.rs  draft.rs  game_plan.rs  match_data.rs  mod.rs  opponent.rs  personal_learning.rs  series.rs  team.rs  team_note.rs  user.rs  utils.rs
src/pages/: action_items.rs  analytics.rs  champion_pool.rs  closed_beta.rs  draft.rs  game_plan.rs  home.rs  match_detail.rs  mod.rs  opponents.rs  personal_learnings.rs  post_game.rs  profile.rs  solo_dashboard.rs  stats.rs  team_builder.rs  tree_drafter.rs
src/server/: auth.rs  bug_report_export.rs  data_dragon.rs  db.rs  leaguepedia.rs  mod.rs  riot.rs  session_store.rs  test_helpers.rs  theme_layer.rs
tests/: db_champion_pool.rs  db_champion_trends.rs  db_drafts.rs  db_game_plan_pipeline.rs  db_goal_progress.rs  db_lp_history.rs  db_opponents.rs  db_personal_goal.rs  db_teams.rs  db_tree.rs  db_users.rs
tests/common/: mod.rs
(+339 files in other folders)
